--- a/form.html
+++ b/form.html
@@ -157,8 +157,8 @@
                                                 </div>
                                             </div>
                                           
-                                            <input type="reset" class="btn btn-danger">Borrar</input>
-                                            <input type="submit" class="btn btn-primary">Enviar</input>
+                                            <button type="reset" class="btn btn-danger">Borrar</button>
+                                            <button type="submit" class="btn btn-primary">Enviar</button>
                                           </form>
                                         </article>
                                 </div>
