--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                         <div class="col-md-12 col-md-6 bg-light">
                             <div class="box row">
                                 <div class="article col-md-12">
-                                    <form action="noexiste.xhtml" method="get">
+                                    <form action="received.html" method="get">
                                         <legend class="title bg-primary mb-3 text-center">Login</legend>
                                         <div class="form-group">
                                             <label for="email">Email</label>
@@ -574,7 +574,7 @@
                                 <div class="article col-md-12">
                                     <p class="text-center">
                                     <pre><code>
-                                        &lt;form action="noexiste.xhtml" method="get">
+                                        &lt;form action="received.html" method="get">
                                             &lt;legend class="title bg-primary mb-3 text-center">Login&lt;/legend>
                                             &lt;div class="form-group">
                                                 &lt;label for="email">Email&lt;/label>
